Adding test for evmAddress changes.
Signed-off-by: Harsh Sawarkar <harshsawarkar111@gmail.com>